trying to make bot work (forbidden error)

--- a/Cv3_Twitter-bot/Cv3_Twitter-bot/Cv3_Twitter-bot.csproj
+++ b/Cv3_Twitter-bot/Cv3_Twitter-bot/Cv3_Twitter-bot.csproj
@@ -6,4 +6,8 @@
     <RootNamespace>Cv3_Twitter_bot</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="TweetinviAPI" Version="5.0.4" />
+  </ItemGroup>
+
 </Project>
